--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,12 +1,6 @@
 name: Build docker image
 
-on:
-  pull_request:
-    branches:
-      - "main"
-    paths:
-      - api/Dockerfile
-      - web/Dockerfile
+on: workflow_dispatch
 
 concurrency:
   group: docker-build-${{ github.head_ref || github.run_id }}
